samples/_failures_safe/1761164545_82ad10_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7e56c07b.c: In function ‘main’:
./samples/SAFE/__tmp_7e56c07b.c:149:9: error: expected declaration or statement at end of input
  149 |         printf("3. Transpose Matrix A\n");
      |         ^~~~~~
./samples/SAFE/__tmp_7e56c07b.c:149:9: error: expected declaration or statement at end of input
